--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
@@ -30,6 +31,11 @@
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.2.2",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.1.6"
   }
 }
